--- a/PokerBot.ipynb
+++ b/PokerBot.ipynb
@@ -17,7 +17,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "Yto5K-cq-bHi"
       },
@@ -56,7 +56,7 @@
       "metadata": {
         "id": "YHPDLO8R-eRc"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -115,7 +115,7 @@
       "metadata": {
         "id": "2S3-0xrA-iV7"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -267,7 +267,7 @@
       "metadata": {
         "id": "39rPGSzQ-ldb"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -292,7 +292,7 @@
         "id": "EQD-7CYp-pg7",
         "outputId": "2ca9d49d-0d6d-47ee-9d67-e1ac4e4db679"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -330,6 +330,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "code to find the optimal strategies is here https://github.com/IanSullivan/PokerCFR/blob/main/kuhn_cfr.py"
+      ],
+      "metadata": {
+        "id": "OOqfEfUhC5VC"
+      }
     },
     {
       "cell_type": "code",
